3.23 - fix global msg layout problem

--- a/web/skins/classic_blue/styles/default.css
+++ b/web/skins/classic_blue/styles/default.css
@@ -140,6 +140,8 @@ html,body {
 }
 #globalMessage{
 	padding-left:12px;
+	position: relative;
+	top:45px;
 }
 #content {
 	display: block;
